--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,6 +1,11 @@
 <% include ./partials/header %>
 <div id="main_container">
     <h1><%= title %></h1>
-    <p>This is a paragraph</p>
+    
+    <ul>
+        <% pyData.forEach(item => { %>
+            <li><%=item%></li>
+        <%})%>
+    </ul>
 </div>
 <% include ./partials/footer %>
